# piwo_player

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake/cross-compile/: qt-windows.cmake
include/: logger_config.hpp  player_config.hpp
src/: CMakeLists.txt
src/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/ui/: CMakeLists.txt  animation_progress.cpp  animation_progress.hpp  configure_tx.cpp  configure_tx.hpp  deploy_rx.cpp  deploy_rx.hpp  main_window.cpp  main_window.hpp  modules_configuration.cpp  modules_configuration.hpp  modules_verify.cpp  modules_verify.hpp  player.cpp  player.hpp  settings.cpp  settings.hpp  verify_modules.cpp  verify_modules.hpp  visual_debug.cpp  visual_debug.hpp
src/ui/extensions/: CMakeLists.txt  display.cpp  display.hpp
src/ui/forms/: CMakeLists.txt  animation_progress_dialog.ui  configure_tx_widget.ui  deploy_rx_widget.ui  main_window.ui  modules_configuration.ui  modules_verify.ui  player.ui  player_widget.ui  settings.ui  settings_widget.ui  verify_modules_widget.ui  visual_debug.ui  visual_debug_widget.ui
src/ui/ui_extensions/: animation_table.hpp  display.cpp  display.hpp  dragableWidgets.cpp  dragableWidgets.h  module_push_button.cpp  module_push_button.hpp  module_uid_list.cpp  module_uid_list.hpp
test/: CMakeLists.txt  modules_deployment_test.cpp
tools/: install_dep  serv.py  udp.py
